[project]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.0"

[tool.black]
line-length = 119
exclude = '.git'

[tool.mypy]
#максимальная длина строки
line-length = 119
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
#Максимальная длина строки
line_length = 119
